update server logger
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -13,6 +13,7 @@ coverage:
 
 # do not include tests folders
 ignore:
+  - "utils"
   - "broadcast"
   - "transport/protocols/websockets"
   - "internal"
