correct informer test
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/tests/plugins/informer/configs/.rr-informer-early-call.yaml
+++ b/tests/plugins/informer/configs/.rr-informer-early-call.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../sleep.php"
+  command: "php ../../php_test_files/sleep.php"
   relay: "pipes"
   relay_timeout: "20s"
 
