update Makefile, codecov
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -21,9 +21,9 @@ ignore:
   - "http/config"
   - "http/middleware/new_relic/error_test.go"
   - "http/middleware/new_relic/splitter_test.go"
+  - "http/middleware/websockets/origin_test.go"
   - "jobs/pipeline/pipeline_test.go"
   - "jobs/job/job_test.go"
   - "metrics/config_test.go"
   - "tests"
   - "utils"
-  - "websockets/origin_test.go"
