update config plugin
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,8 @@ run:
     - .git
     - tests/mocks
     - tests/plugins
+    - config/configs/v2_6
+    - config/configs/v2_7
   modules-download-mode: readonly
   allow-parallel-runners: true
 
