--- a/config/configs/v2_7/.rr27.yaml
+++ b/config/configs/v2_7/.rr27.yaml
@@ -20,529 +20,6 @@ server:
   relay: pipes
   relay_timeout: 60s
 
-logs:
-  mode: development
-  level: debug
-  encoding: console
-  line_ending: "\n"
-  output: stderr
-  err_output: stderr
-  channels:
-    http:
-      mode: development
-      level: panic
-      encoding: console
-      output: stdout
-      err_output: stderr
-    server:
-      mode: production
-      level: info
-      encoding: json
-      output: stdout
-      err_output: stdout
-    rpc:
-      mode: raw
-      level: debug
-      encoding: console
-      output: stderr
-      err_output: stdout
-
-temporal:
-  address: 127.0.0.1:7233
-  cache_size: 10000
-  namespace: default
-  metrics:
-    address: 127.0.0.1:9091
-    type: "summary"
-    prefix: "foobar"
-
-  activities:
-    debug: false
-    num_workers: 0
-    max_jobs: 64
-    allocate_timeout: 60s
-    destroy_timeout: 60s
-    supervisor:
-      watch_tick: 1s
-      ttl: 0s
-      idle_ttl: 10s
-      max_worker_memory: 128
-      exec_ttl: 60s
-
-  codec: proto
-  debug_level: 2
-
-kv:
-  boltdb-south:
-    driver: boltdb
-    config:
-      file: "rr.db"
-      permissions: 0777
-      interval: 40
-  us-central-kv:
-    driver: memcached
-    config:
-      addr: [ "localhost:11211" ]
-  fast-kv-fr:
-    driver: redis
-    config:
-      addrs:
-        - "localhost:6379"
-      master_name: ""
-      username: ""
-      password: ""
-      db: 0
-      sentinel_password: ""
-      route_by_latency: false
-      route_randomly: false
-      dial_timeout: 0 # accepted values [1s, 5m, 3h]
-      max_retries: 1
-      min_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-      max_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-      pool_size: 0
-      min_idle_conns: 0
-      max_conn_age: 0 # accepted values [1s, 5m, 3h]
-      read_timeout: 0 # accepted values [1s, 5m, 3h]
-      write_timeout: 0 # accepted values [1s, 5m, 3h]
-      pool_timeout: 0 # accepted values [1s, 5m, 3h]
-      idle_timeout: 0 # accepted values [1s, 5m, 3h]
-      idle_check_freq: 0 # accepted values [1s, 5m, 3h]
-      read_only: false
-
-  local-memory:
-    driver: memory
-    config:
-      interval: 1
-
-service:
-  some_service_1:
-    command: php tests/plugins/service/test_files/loop.php
-    env:
-      foo: "BAR"
-      foo2: "BAR2"
-
-    process_num: 1
-    exec_timeout: 0
-    remain_after_exit: true
-    restart_sec: 1
-
-  some_service_2:
-    command: "binary"
-    env:
-      foo: "BAR"
-      foo2: "BAR2"
-    process_num: 1
-    exec_timeout: 0
-    remain_after_exit: true
-    restart_sec: 1
-
-http:
-  address: 127.0.0.1:8080
-  internal_error_code: 505
-  access_logs: false
-  max_request_size: 256
-  middleware: [ "headers", "gzip" ]
-  trusted_subnets:
-    [
-        "10.0.0.0/8",
-        "127.0.0.0/8",
-        "172.16.0.0/12",
-        "192.168.0.0/16",
-        "::1/128",
-        "fc00::/7",
-        "fe80::/10",
-    ]
-
-  new_relic:
-    app_name: "app"
-    license_key: "key"
-
-  uploads:
-    dir: "/tmp"
-    forbid: [ ".php", ".exe", ".bat", ".sh" ]
-    allow: [ ".html", ".aaa" ]
-  headers:
-    cors:
-      allowed_origin: "*"
-      allowed_headers: "*"
-      allowed_methods: "GET,POST,PUT,DELETE"
-      allow_credentials: true
-      exposed_headers: "Cache-Control,Content-Language,Content-Type,Expires,Last-Modified,Pragma"
-      max_age: 600
-
-    request:
-      input: "custom-header"
-
-    response:
-      X-Powered-By: "RoadRunner"
-
-  # Settings for "static" middleware (docs: https://roadrunner.dev/docs/http-static).
-  static:
-    # Path to the directory to serve
-    #
-    # Default: "." (current)
-    dir: "."
-
-    # File patterns to forbid
-    #
-    # Default: empty
-    forbid: [ "" ]
-
-    # Etag calculation (base on the body CRC32)
-    #
-    # Default: false
-    calculate_etag: false
-
-    # Weak etag calculation (based only on the content-length CRC32)
-    #
-    # Default: false
-    weak: false
-
-    # Patterns to allow
-    #
-    # Default: empty
-    allow: [ ".txt", ".php" ]
-
-    # Request headers
-    #
-    # Default: empty
-    request:
-      input: "custom-header"
-
-    # Response headers
-    #
-    # Default: empty
-    response:
-      output: "output-header"
-
-  # Workers pool settings.
-  pool:
-    # Debug mode for the pool. In this mode, pool will not pre-allocate the worker. Worker (only 1, num_workers ignored) will be allocated right after the request arrived.
-    #
-    # Default: false
-    debug: false
-
-    # How many worker processes will be started. Zero (or nothing) means the number of logical CPUs.
-    #
-    # Default: 0
-    num_workers: 0
-
-    # Maximal count of worker executions. Zero (or nothing) means no limit.
-    #
-    # Default: 0
-    max_jobs: 64
-
-    # Timeout for worker allocation. Zero means no limit.
-    #
-    # Default: 60s
-    allocate_timeout: 60s
-
-    # Timeout for worker destroying before process killing. Zero means no limit.
-    #
-    # Default: 60s
-    destroy_timeout: 60s
-
-    # Supervisor is used to control http workers (previous name was "limit", docs:
-    # https://roadrunner.dev/docs/php-limit). "Soft" limits will not interrupt current request processing. "Hard"
-    # limit on the contrary - interrupts the execution of the request.
-    supervisor:
-      # How often to check the state of the workers.
-      #
-      # Default: 1s
-      watch_tick: 1s
-
-      # Maximum time worker is allowed to live (soft limit). Zero means no limit.
-      #
-      # Default: 0s
-      ttl: 0s
-
-      # How long worker can spend in IDLE mode after first using (soft limit). Zero means no limit.
-      #
-      # Default: 0s
-      idle_ttl: 10s
-
-      # Maximal worker memory usage in megabytes (soft limit). Zero means no limit.
-      #
-      # Default: 0
-      max_worker_memory: 128
-
-      # Maximal job lifetime (hard limit). Zero means no limit.
-      #
-      # Default: 0s
-      exec_ttl: 60s
-
-  # SSL (Secure Sockets Layer) (TLS) settings (docs: https://roadrunner.dev/docs/http-https).
-  ssl:
-    # Host and port to listen on (eg.: `127.0.0.1:443`).
-    #
-    # Default: ":443"
-    address: "127.0.0.1:443"
-
-    # Use ACME certificates provider (Let's encrypt)
-    acme:
-      # Directory to use as a certificate/pk, account info storage
-      #
-      # Optional. Default: rr_cache
-      certs_dir: rr_le_certs
-
-      # User email
-      #
-      # Used to create LE account. Mandatory. Error on empty.
-      email: you-email-here@email
-
-      # Alternate port for the http challenge. Challenge traffic should be redirected to this port if overridden.
-      #
-      # Optional. Default: 80
-      alt_http_port: 80
-
-
-      # Alternate port for the tls-alpn-01 challenge. Challenge traffic should be redirected to this port if overridden.
-      #
-      # Optional. Default: 443.
-      alt_tlsalpn_port: 443
-
-      # Challenge types
-      #
-      # Optional. Default: http-01. Possible values: http-01, tlsalpn-01
-      challenge_type: http-01
-
-      # Use production or staging endpoint. NOTE, try to use staging endpoint to make sure, that everything works correctly.
-      #
-      # Optional, but for production should be set to true. Default: false
-      use_production_endpoint: true
-
-      # List of your domains to obtain certificates
-      #
-      # Mandatory. Error on empty.
-      domains: [
-          "your-cool-domain.here",
-          "your-second-domain.here"
-      ]
-
-    # Automatic redirect from http:// to https:// schema.
-    #
-    # Default: false
-    redirect: true
-
-    # Path to the cert file. This option is required for SSL working.
-    #
-    # This option is required.
-    cert: /ssl/server.crt
-
-    # Path to the cert key file.
-    #
-    # This option is required.
-    key: /ssl/server.key
-
-    # Path to the root certificate authority file.
-    #
-    # This option is optional.
-    root_ca: /ssl/root.crt
-
-  # FastCGI frontend support.
-  fcgi:
-    # FastCGI connection DSN. Supported TCP and Unix sockets. An empty value disables this.
-    #
-    # Default: ""
-    address: tcp://0.0.0.0:7921
-
-  # HTTP/2 settings.
-  http2:
-    # HTTP/2 over non-encrypted TCP connection using H2C.
-    #
-    # Default: false
-    h2c: false
-
-    # Maximal concurrent streams count.
-    #
-    # Default: 128
-    max_concurrent_streams: 128
-
-# Redis section. Should be defined to use as a broadcast driver for the websockets (with no limitation to use in other plugins)
-redis:
-  addrs:
-    - "localhost:6379"
-    # if a MasterName is passed a sentinel-backed FailoverClient will be returned
-  master_name: ""
-  username: ""
-  password: ""
-  db: 0
-  sentinel_password: ""
-  route_by_latency: false
-  route_randomly: false
-  dial_timeout: 0 # accepted values [1s, 5m, 3h]
-  max_retries: 1
-  min_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-  max_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-  pool_size: 0
-  min_idle_conns: 0
-  max_conn_age: 0 # accepted values [1s, 5m, 3h]
-  read_timeout: 0 # accepted values [1s, 5m, 3h]
-  write_timeout: 0 # accepted values [1s, 5m, 3h]
-  pool_timeout: 0 # accepted values [1s, 5m, 3h]
-  idle_timeout: 0 # accepted values [1s, 5m, 3h]
-  idle_check_freq: 0 # accepted values [1s, 5m, 3h]
-  read_only: false
-
-# Websockets plugin
-#
-# Should be attached as a middleware to the http plugin middlewares
-websockets:
-  # Broker to use. Brokers can be set in the broadcast plugin. For example, if you use broker: default here, broadcast plugin should have default broker in its config.
-  #
-  # This option is required.
-  broker: default-redis
-
-  # Allowed request origin (single value). This option is optional (allowed all by default)
-  #
-  # Default: "*". Samples: "https://*.my.site", "http//*.com", "10.1.1.1", etc
-  allowed_origin: "*"
-
-  # http path where to handle websockets connections
-  #
-  # Default: /ws
-  path: "/ws"
-
-broadcast:
-  default:
-    driver: memory
-    config: { }
-
-  default-redis:
-    # Driver to use. Available drivers: redis, memory. Redis driver require configuration (if empty - localhost:6379 one-node client will be used, see redis plugin config).
-    #
-    # This option is required.
-    driver: redis
-    # Local configuration section
-    #
-    # This option is required to use local section, otherwise (default-redis) global configuration will be used.
-    config:
-      # Redis configuration. This configuration related to the default-redis section. Broadcast plugin will use this configuration first.
-      # If section configuration doesn't exists, second priority - global redis configuration.
-      # If there are no configurations provided, default will be used.
-      #
-      # Default: localhost:6379
-      addrs:
-        - "localhost:6379"
-      # if a MasterName is passed a sentinel-backed FailoverClient will be returned
-      master_name: ""
-      username: ""
-      password: ""
-      db: 0
-      sentinel_password: ""
-      route_by_latency: false
-      route_randomly: false
-      dial_timeout: 0 # accepted values [1s, 5m, 3h]
-      max_retries: 1
-      min_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-      max_retry_backoff: 0 # accepted values [1s, 5m, 3h]
-      pool_size: 0
-      min_idle_conns: 0
-      max_conn_age: 0 # accepted values [1s, 5m, 3h]
-      read_timeout: 0 # accepted values [1s, 5m, 3h]
-      write_timeout: 0 # accepted values [1s, 5m, 3h]
-      pool_timeout: 0 # accepted values [1s, 5m, 3h]
-      idle_timeout: 0 # accepted values [1s, 5m, 3h]
-      idle_check_freq: 0 # accepted values [1s, 5m, 3h]
-      read_only: false
-
-# Application metrics in Prometheus format (docs: https://roadrunner.dev/docs/beep-beep-metrics). Drop this section
-# for this feature disabling.
-metrics:
-  # Prometheus client address (path /metrics added automatically).
-  #
-  # Default: "127.0.0.1:2112"
-  address: "127.0.0.1:2112"
-
-  # Application-specific metrics (published using an RPC connection to the server).
-  collect:
-    app_metric:
-      type: histogram
-      help: "Custom application metric"
-      labels: [ "type" ]
-      buckets: [ 0.1, 0.2, 0.3, 1.0 ]
-      # Objectives defines the quantile rank estimates with their respective absolute error (for summary only).
-      objectives:
-        - 1.4: 2.3
-        - 2.0: 1.4
-
-# Health check endpoint (docs: https://roadrunner.dev/docs/beep-beep-health). If response code is 200 - it means at
-# least one worker ready to serve requests. 500 - there are no workers ready to service requests.
-# Drop this section for this feature disabling.
-status:
-  # Host and port to listen on (eg.: `127.0.0.1:2114`). Use the following URL: http://127.0.0.1:2114/health?plugin=http
-  # Multiple plugins must be separated using "&" - http://127.0.0.1:2114/health?plugin=http&plugin=rpc where "http" and
-  # "rpc" are active (connected) plugins.
-  #
-  # This option is required.
-  address: 127.0.0.1:2114
-
-  # Response status code if a requested plugin not ready to handle requests
-  # Valid for both /health and /ready endpoints
-  #
-  # Default: 503
-  unavailable_status_code: 503
-
-# Automatically detect PHP file changes and reload connected services (docs:
-# https://roadrunner.dev/docs/beep-beep-reload). Drop this section for this feature disabling.
-reload:
-  # Sync interval.
-  #
-  # Default: "1s"
-  interval: 1s
-
-  # Global patterns to sync.
-  #
-  # Default: [".php"]
-  patterns: [ ".php" ]
-
-  # List of included for sync services (this is a map, where key name is a plugin name).
-  #
-  # Default: <empty map>
-  services:
-    http:
-      # Directories to sync. If recursive is set to true, recursive sync will be applied only to the directories in
-      # "dirs" section. Dot (.) means "current working directory".
-      #
-      # Default: []
-      dirs: [ "." ]
-
-      # Recursive search for file patterns to add.
-      #
-      # Default: false
-      recursive: true
-
-      # Ignored folders.
-      #
-      # Default: []
-      ignore: [ "vendor" ]
-
-      # Service specific file pattens to sync.
-      #
-      # Default: []
-      patterns: [ ".php", ".go", ".md" ]
-
-
-nats:
-  addr: "demo.nats.io"
-
-boltdb:
-  permissions: 0777
-
-amqp:
-  addr: amqp://guest:guest@127.0.0.1:5672/
-
-beanstalk:
-  addr: tcp://127.0.0.1:11300
-  timeout: 10s
-
-sqs:
-  key: api-key
-  secret: api-secret
-  region: us-west-1
-  session_token: test
-  endpoint: http://127.0.0.1:9324
-
 jobs:
   num_pollers: 32
   pipeline_size: 100000
@@ -557,23 +34,24 @@ jobs:
     test-local:
       driver: memory
       priority: 10
-      prefetch: 10000
 
-      config: { }
+      config:
+        prefetch: 10000
 
     test-local-1:
       driver: boltdb
       priority: 10
-      prefetch: 10000
 
-      config: { }
+      config:
+        file: "test-local-1-bolt.db"
+        prefetch: 10000
 
     test-local-2:
       drier: amqp
-      prefetch: 10
       priority: 1
 
       config:
+        prefetch: 10
         queue: test-1-queue
         exchange: default
         exchange_type: direct
