Eliminate global variables (except immutable), add versions support
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -79,6 +79,7 @@ linters: # All available linters list: <https://golangci-lint.run/usage/linters/
     - unconvert # Remove unnecessary type conversions
     - unused # Checks Go code for unused constants, variables, functions and types
     - varcheck # Finds unused global variables and constants
+    - gochecknoglobals
     - whitespace # Tool for detection of leading and trailing whitespace
 
 issues:
