--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -26,6 +26,10 @@ body:
         - Service
         - Server
         - Status
+        - Metrics
+        - Temporal
+        - Broadcast
+        - Websockets
 
   - type: textarea
     id: idea
