--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -74,6 +74,9 @@ jobs:
           version: '3.x'
 
       - name: Run golang tests with coverage
+        env:
+          NEW_RELIC_APP_NAME: ${{ secrets.NEW_RELIC_APP_NAME }}
+          NEW_RELIC_LICENSE_KEY: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
         run: make test_coverage
 
       - uses: codecov/codecov-action@v2 # Docs: <https://github.com/codecov/codecov-action>
