--- a/tests/plugins/http/configs/.rr-fcgi-reqUri.yaml
+++ b/tests/plugins/http/configs/.rr-fcgi-reqUri.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../php_test_files/http/client.php request-uri pipes"
+  command: "php ../../php_test_files/psr-worker.php"
   relay: "pipes"
   relay_timeout: "20s"
 
