--- a/tests/plugins/jobs/amqp/.rr-amqp-resp-jobs-ok.yaml
+++ b/tests/plugins/jobs/amqp/.rr-amqp-resp-jobs-ok.yaml
@@ -30,6 +30,7 @@ jobs:
       priority: 1
       exchange: amqp.default
       exchange_type: direct
+      delete_queue_on_stop: true
       routing_key: test-1-queue
       exclusive: false
       multiple_ack: false
